BScreen uses ~0 to denote the current workspace *index*. This should fix ticket #4144. Untested.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@31864 a95241bf-73f2-0310-859d-f6bbb57e9c96